fix(md-enhance): fix checkbox border on safari

--- a/packages/md-enhance/src/client/styles/tasklist.scss
+++ b/packages/md-enhance/src/client/styles/tasklist.scss
@@ -1,5 +1,6 @@
 input[type="checkbox"].task-list-item-checkbox {
   position: relative;
+  border: 0;
   cursor: pointer;
 
   &::after {
